--- a/BrewKernel/Makefile
+++ b/BrewKernel/Makefile
@@ -19,6 +19,9 @@
 kernel_source_files := $(shell find src/impl/kernel -name *.c)
 kernel_object_files := $(patsubst src/impl/kernel/%.c, build/kernel/%.o, $(kernel_source_files))
 
+fs_source_files := $(shell find src/intf -name *.c -not -path "*/APPS/*")
+fs_object_files := $(patsubst src/intf/%.c, build/intf/%.o, $(fs_source_files))
+
 x86_64_c_source_files := $(shell find src/impl/x86_64 -name *.c)
 x86_64_c_object_files := $(patsubst src/impl/x86_64/%.c, build/x86_64/%.o, $(x86_64_c_source_files))
 
@@ -40,12 +43,17 @@ $(x86_64_asm_object_files): build/x86_64/%.o : src/impl/x86_64/%.asm
 	mkdir -p $(dir $@) && \
 	nasm -f elf64 $(patsubst build/x86_64/%.o, src/impl/x86_64/%.asm, $@) -o $@
 
+# Build rule for filesystem files
+$(fs_object_files): build/intf/%.o : src/intf/%.c
+	mkdir -p $(dir $@) && \
+	x86_64-elf-gcc -c -I src/intf -ffreestanding -O0 $(patsubst build/intf/%.o, src/intf/%.c, $@) -o $@
+
 .PHONY: build-x86_64 clean-build
 clean-build:
 	find build -type f -delete
 
-build-x86_64: clean-build $(kernel_object_files) $(x86_64_object_files)
+build-x86_64: clean-build $(kernel_object_files) $(x86_64_object_files) $(fs_object_files)
 	mkdir -p dist/x86_64 && \
-	x86_64-elf-ld -n -o dist/x86_64/kernel.bin -T targets/x86_64/linker.ld $(kernel_object_files) $(x86_64_object_files) && \
+	x86_64-elf-ld -n -o dist/x86_64/kernel.bin -T targets/x86_64/linker.ld $(kernel_object_files) $(x86_64_object_files) $(fs_object_files) && \
 	cp dist/x86_64/kernel.bin targets/x86_64/iso/boot/kernel.bin && \
 	grub-mkrescue /usr/lib/grub/i386-pc -o dist/x86_64/kernel.iso targets/x86_64/iso
